[build-system]
requires = ["setuptools>=61.0", "wheel"]  
build-backend = "setuptools.build_meta"

[project]
name = "sora2-api"
version = "1.1.3"
description = "A tool for generating videos using the Sora 2 API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU" }

authors = [
  { name = "Noah Cole", email = "sponosdaddya@gmail.com" }
]
